cmake_minimum_required(VERSION 4.0)
project(MEMOIRE_ENSIIE C)

set(CMAKE_C_STANDARD 11)

add_executable(hw
        C/TP1/helloWorld.c)
add_executable(EX1 C/TP1/EX1/lorem.c)
add_executable(EX5 C/TP1/EX5/sommeproduit.c)
add_executable(EX7 C/TP1/EX7/milieu.c)
add_executable(EX9 C/TP1/EX9/sphere.c)
add_executable(EX10 C/TP1/EX10/positif.c)
add_executable(EX12 C/TP1/EX12/tablem.c)
add_executable(EX17 C/TP1/EX17/rectangle.c)
add_executable(EX18 C/TP1/EX18/gravite.c)
add_executable(EX22 C/TP1/EX22/triangle.c
        C/TP1/EX22/triangle.c)

add_executable(23 C/TP1/EX23/norme1.c)
add_executable(EX1_TP2 C/TPTableaux/EX1/tableau.c)
add_executable(EX2_TP2 C/TPTableaux/ex2/tableau-dicho.c)
add_executable(EX3_TP2 C/TPTableaux/ex3/tableau-3.c)
add_executable(EX4_TP2 C/TPTableaux/EX4/duplicat.c)
add_executable(EX6_TP2 C/TPTableaux/EX6/ex6.c)
add_executable(EX5_TP2 C/TPTableaux/EX5/printf2.c)
add_executable(tp3-ex1 C/TPPointers/Ex1/echange.c)
add_executable(tp3-ex2 C/TPPointers/Ex2/initfin.c)
add_executable(tp3-ex3 C/TPPointers/Ex3/minmax.c)
add_executable(tp3-ex4 C/TPPointers/Ex4/loglist.c)
add_executable(tp3-ex5 C/TPPointers/Ex5/pointeursType.c)
add_executable(tp3-ex6 C/TPPointers/EX6/date.c)
add_executable(Vecteurs C/TPPointers/EX8/vercteurs.c)
target_link_libraries(Vecteurs m)
add_executable(tableau_dynamique C/TPPointers/EX9/tdyn.c
        C/TPPointers/EX9/histo.c)
add_executable(factoriel C/TPRecurciviter/EX1/fact.c)
add_executable(TP_Rec_dicho C/TPRecurciviter/EX2/dichoRec.c)
add_executable(RemplacementChar C/TPRecurciviter/EX3/replace.c)
add_executable(log C/TPRecurciviter/EX4/log.c)
target_link_libraries(log m)
add_executable(pgcd C/TPRecurciviter/EX5/pgcd.c)
add_executable(permut C/TPRecurciviter/EX6/permut.c)
